fix(config): Modified config files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "controlib"
-dynamic = ["version"]
+version = "0.0.1"
 authors = [
     {name = "Miguel Santos Loureiro", email = "miguel.santos.loureiro@gmail.com"}
 ]
@@ -45,9 +45,6 @@ repository = "https://github.com/MiguelLoureiro98/controlib"
 [tool.setuptools.packages.find]
 include = ["controlib*"]
 
-[tool.setuptools.dynamic.version]
-attr = "controlib.__version__"
-
 [tool.semantic_release]
-version_variables = ["controlib/__init__.py:__version__"]
+version_toml = ["pyproject.toml:version"]
 changelog_file = "docs/changelog.md"
