--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,5 @@ version = {attr = "controlib.__version__"}
 [tool.semantic_release]
 version_variables = ["controlib/_version.py:__version__"]
 changelog_file = "docs/changelog.md"
+remote.type = "github"
+remote.token = "GH_TOKEN"
