build(config): Specified build command for PSR in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,4 @@ version_variables = ["controlib/_version.py:__version__"]
 changelog.default_templates.changelog_file = "docs/changelog.md"
 remote.type = "github"
 remote.token = "GH_TOKEN"
+build_command = "python -m build ."
