--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,12 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "pysimlink>=1.2.1"
+    "numpy>=2.1.3"
 ]
 
 [project.optional-dependencies]
 dev = [
+    "pytest>=8.3.3",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.5.45",
     "mkdocs-material-extensions>=1.3.1",
