--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dev = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.5.45",
     "mkdocs-material-extensions>=1.3.1",
-    "mkdocstrings-python>=1.12.2"
+    "mkdocstrings-python>=1.12.2",
+    "build>=1.2.2"
 ]
 
 [project.urls]
